--- a/stackit-frontend/package.json
+++ b/stackit-frontend/package.json
@@ -11,9 +11,14 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "@tiptap/react": "^2.26.1",
+    "@tiptap/starter-kit": "^2.26.1",
+    "jodit-react": "^5.2.19",
+    "quill": "^2.0.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-router-dom": "^7.6.3",
+    "react-tag-input-component": "^2.0.2",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
