--- a/stackit-frontend/package.json
+++ b/stackit-frontend/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.1.11",
     "@tiptap/react": "^2.26.1",
     "@tiptap/starter-kit": "^2.26.1",
+    "axios": "^1.10.0",
     "jodit-react": "^5.2.19",
     "quill": "^2.0.3",
     "react": "^18.2.0",
